make the CopyUpEvolutionsHelper classes non-generic